const mongoose = require('mongoose');

const VideoSchema = mongoose.Schema({
    title: {
        type: String,
        required: true
    },
    thumbnail_url: {
        type: String,
        required: true
    }
});

module.exports = mongoose.model('Video', VideoSchema);